--- a/BlueBirdDX/BlueBirdDX.csproj
+++ b/BlueBirdDX/BlueBirdDX.csproj
@@ -20,6 +20,7 @@
 
     <ItemGroup>
       <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
+      <PackageReference Include="Quartz" Version="3.8.1" />
       <PackageReference Include="Serilog" Version="3.1.1" />
       <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
