--- a/BlueBirdDX/BlueBirdDX.csproj
+++ b/BlueBirdDX/BlueBirdDX.csproj
@@ -26,6 +26,7 @@
       <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
       <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
       <PackageReference Include="Serilog.Sinks.Slack" Version="2.2.2" />
+      <PackageReference Include="TweetinviAPI" Version="5.0.4" />
     </ItemGroup>
 
 </Project>
