WebApp: Add MongoDB driver library

--- a/BlueBirdDX.WebApp/BlueBirdDX.WebApp.csproj
+++ b/BlueBirdDX.WebApp/BlueBirdDX.WebApp.csproj
@@ -17,4 +17,8 @@
       <ProjectReference Include="..\BlueBirdDX.Common\BlueBirdDX.Common.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
+    </ItemGroup>
+
 </Project>
