appsettings: Add database settings for development

--- a/BlueBirdDX.WebApp/appsettings.Development.json
+++ b/BlueBirdDX.WebApp/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb://bluebirddx:password@127.0.0.1:27017/",
+    "DatabaseName": "bluebirddx"
+  },
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
