--- a/BlueBirdDX.Common/BlueBirdDX.Common.csproj
+++ b/BlueBirdDX.Common/BlueBirdDX.Common.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AWSSDK.S3" Version="3.7.307.15" />
       <PackageReference Include="MongoDB.Bson" Version="2.24.0" />
     </ItemGroup>
 
