RemoteStorageService: Add service to hold a RemoteStorage instance

--- a/BlueBirdDX.WebApp/appsettings.Development.json
+++ b/BlueBirdDX.WebApp/appsettings.Development.json
@@ -3,6 +3,12 @@
     "ConnectionString": "mongodb://bluebirddx:password@127.0.0.1:27017/",
     "DatabaseName": "bluebirddx"
   },
+  "RemoteStorageSettings": {
+    "ServiceUrl": "https://nyc3.digitaloceanspaces.com",
+    "Bucket": "bluebirddx-dev",
+    "AccessKey": "",
+    "AccessKeySecret": ""
+  },
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
