--- a/BlueBirdDX.WebApp/BlueBirdDX.WebApp.csproj
+++ b/BlueBirdDX.WebApp/BlueBirdDX.WebApp.csproj
@@ -19,6 +19,7 @@
 
     <ItemGroup>
       <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
+      <PackageReference Include="SixLabors.ImageSharp" Version="3.1.4" />
     </ItemGroup>
 
 </Project>
