nuget-ci: Add NuGet config for CI usage

--- a/BlueBirdDX/BlueBirdDX.csproj
+++ b/BlueBirdDX/BlueBirdDX.csproj
@@ -12,6 +12,9 @@
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+      <Content Include="..\nuget-ci.config">
+        <Link>nuget-ci.config</Link>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
