Core: Restore dependencies using CI NuGet config file in Dockerfile

--- a/BlueBirdDX/Dockerfile
+++ b/BlueBirdDX/Dockerfile
@@ -3,9 +3,12 @@ WORKDIR /app
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 ARG BUILD_CONFIGURATION=Release
+ARG NuGet_SourceUrl
+ARG NuGet_SourceUserName
+ARG NuGet_SourcePassword
 WORKDIR /src
-COPY ["BlueBirdDX/BlueBirdDX.csproj", "BlueBirdDX/"]
-RUN dotnet restore "BlueBirdDX/BlueBirdDX.csproj"
+COPY ["BlueBirdDX/BlueBirdDX.csproj", "nuget-ci.config", "BlueBirdDX/"]
+RUN dotnet restore --configfile "BlueBirdDX/nuget-ci.config" "BlueBirdDX/BlueBirdDX.csproj"
 COPY . .
 WORKDIR "/src/BlueBirdDX"
 RUN dotnet build "BlueBirdDX.csproj" -c $BUILD_CONFIGURATION -o /app/build
