--- a/BlueBirdDX/BlueBirdDX.csproj
+++ b/BlueBirdDX/BlueBirdDX.csproj
@@ -23,6 +23,7 @@
 
     <ItemGroup>
       <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
+      <PackageReference Include="oatmealdome.airship" Version="2.0.0" />
       <PackageReference Include="Quartz" Version="3.8.1" />
       <PackageReference Include="Serilog" Version="3.1.1" />
       <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
