--- a/BlueBirdDX/BlueBirdDX.csproj
+++ b/BlueBirdDX/BlueBirdDX.csproj
@@ -31,6 +31,7 @@
       <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
       <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+      <PackageReference Include="Serilog.Sinks.Grafana.Loki" Version="8.3.0" />
       <PackageReference Include="Serilog.Sinks.Slack" Version="2.2.2" />
       <PackageReference Include="TweetinviAPI" Version="5.0.4" />
     </ItemGroup>
