--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,7 +17,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./BlueBirdDX/
+          file: ./BlueBirdDX/Dockerfile
           platforms: linux/amd64
           build-args: |
             NuGet_SourceUrl=https://nuget.pkg.github.com/oatmealdome/index.json
@@ -29,7 +29,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./BlueBirdDX.WebApp/
+          file: ./BlueBirdDX.WebApp/Dockerfile
           platforms: linux/amd64
           build-args: |
             NuGet_SourceUrl=https://nuget.pkg.github.com/oatmealdome/index.json
