--- a/BlueBirdDX.WebApp/appsettings.Development.json
+++ b/BlueBirdDX.WebApp/appsettings.Development.json
@@ -1,7 +1,8 @@
 {
   "DatabaseSettings": {
     "ConnectionString": "mongodb://bluebirddx:password@127.0.0.1:27017/",
-    "DatabaseName": "bluebirddx"
+    "DatabaseName": "bluebirddx",
+    "MongoExpressUrl": "http://localhost:7400"
   },
   "RemoteStorageSettings": {
     "ServiceUrl": "https://nyc3.digitaloceanspaces.com",
