--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,12 +16,19 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set Up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set Up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Build Core
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./BlueBirdDX/Dockerfile
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           push: true
           build-args: |
             NuGet_SourceUrl=https://nuget.pkg.github.com/oatmealdome/index.json
@@ -34,7 +41,7 @@ jobs:
         with:
           context: .
           file: ./BlueBirdDX.WebApp/Dockerfile
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           push: true
           build-args: |
             NuGet_SourceUrl=https://nuget.pkg.github.com/oatmealdome/index.json
