--- a/BlueBirdDX/Dockerfile
+++ b/BlueBirdDX/Dockerfile
@@ -1,7 +1,8 @@
 ﻿FROM mcr.microsoft.com/dotnet/runtime:6.0 AS base
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+# --platform=$BUILDPLATFORM is currently required for arm builds: https://github.com/dotnet/sdk/issues/29892#issuecomment-1691521917
+FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 ARG BUILD_CONFIGURATION=Release
 ARG NuGet_SourceUrl
 ARG NuGet_SourceUserName
