Actions: Set ApiPublic package version based on the current tag

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,7 +79,7 @@ jobs:
       
       - name: Pack
         if: github.event_name == 'release'
-        run: dotnet pack BlueBirdDX.PublicApi/BlueBirdDX.PublicApi.csproj --configuration Release --no-restore --verbosity normal --output .
+        run: dotnet pack BlueBirdDX.PublicApi/BlueBirdDX.PublicApi.csproj /p:Version=${{ github.event.release.tag_name }} --configuration Release --no-restore --verbosity normal --output .
       
       - name: Push to NuGet Source
         if: github.event_name == 'release'
