--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,19 +18,32 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '8.0.x'
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
       
       - name: Clear NuGet Caches
         run: dotnet nuget locals all --clear
       
-      - name: Install dependencies
+      - name: Install dependencies (.NET)
         run: dotnet restore --configfile nuget-ci.config
         env:
           NuGet_SourceUrl: https://nuget.pkg.github.com/oatmealdome/index.json
           NuGet_SourceUserName: ${{ github.repository_owner }}
           NuGet_SourcePassword: ${{ secrets.GHCR_INSTALL_PAT }}
+      
+      - name: Install dependencies (Node)
+        working-directory: ./BlueBirdDX.TextWrapper
+        run: npm ci
         
-      - name: Build
+      - name: Build (.NET)
         run: dotnet build --configuration Release --no-restore
+
+      - name: Build (Node)
+        working-directory: ./BlueBirdDX.TextWrapper
+        run: npm run build
   docker-build:
     runs-on: ubuntu-latest
 
@@ -61,3 +74,15 @@ jobs:
             NuGet_SourcePassword=${{ secrets.GHCR_INSTALL_PAT }}
           tags: |
             ghcr.io/oatmealdome/bluebirddxwebapp:latest
+      - name: Build TextWrapper
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./BlueBirdDX.TextWrapper/Dockerfile
+          platforms: linux/amd64
+          build-args: |
+            NuGet_SourceUrl=https://nuget.pkg.github.com/oatmealdome/index.json
+            NuGet_SourceUserName=${{ github.repository_owner }}
+            NuGet_SourcePassword=${{ secrets.GHCR_INSTALL_PAT }}
+          tags: |
+            ghcr.io/oatmealdome/bluebirddxtextwrapper:latest
