--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,6 +49,19 @@ jobs:
             NuGet_SourcePassword=${{ secrets.GHCR_INSTALL_PAT }}
           tags: |
             ghcr.io/oatmealdome/bluebirddxwebapp:latest
+      - name: Build TextWrapper
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./BlueBirdDX.TextWrapper/Dockerfile
+          platforms: linux/amd64,linux/arm64
+          push: true
+          build-args: |
+            NuGet_SourceUrl=https://nuget.pkg.github.com/oatmealdome/index.json
+            NuGet_SourceUserName=${{ github.repository_owner }}
+            NuGet_SourcePassword=${{ secrets.GHCR_INSTALL_PAT }}
+          tags: |
+            ghcr.io/oatmealdome/bluebirddxtextwrapper:latest
   api-library-build:
     runs-on: ubuntu-latest
 
