Actions: Set TextWrapper image build context to the TextWrapper root directory

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,8 +64,7 @@ jobs:
       - name: Build TextWrapper
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: ./BlueBirdDX.TextWrapper/Dockerfile
+          context: ./BlueBirdDX.TextWrapper
           platforms: linux/amd64
           build-args: |
             NuGet_SourceUrl=https://nuget.pkg.github.com/oatmealdome/index.json
