--- a/BlueBirdDX.WebApp/BlueBirdDX.WebApp.csproj
+++ b/BlueBirdDX.WebApp/BlueBirdDX.WebApp.csproj
@@ -23,6 +23,7 @@
 
     <ItemGroup>
       <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
+      <PackageReference Include="NATS.Net" Version="2.5.5" />
       <PackageReference Include="SixLabors.ImageSharp" Version="3.1.4" />
     </ItemGroup>
 
