--- a/BlueBirdDX/BlueBirdDX.csproj
+++ b/BlueBirdDX/BlueBirdDX.csproj
@@ -22,6 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FFMpegCore" Version="5.1.0" />
       <PackageReference Include="Mastonet" Version="3.1.1" />
       <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
       <PackageReference Include="NATS.Net" Version="2.5.5" />
